<resources>
    <string name="app_name">kenya</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_catalogo">Catalogo</string>
    <string name="title_seleccionado">Seleccionado</string>
    <string name="title_consulta">Consulta</string>

    <string name="app_titulo_login">Ingrese Sesion</string>
    <string name="title_lbl_usuario">Usuario</string>
    <string name="title_txt_usuario">Ingrese Usuario</string>
    <string name="title_lbl_password">Contraseña</string>
    <string name="title_txt_password">Ingrese Contraseña</string>
    <string name="title_btn_ingresar">Ingresar</string>
    <string name="title_txt_version">Version 1.0</string>

    <string name="title_txt_centro">Centro autorizado de servicio</string>
    <string name="title_text_llamanos">LLamanos nosotros te atendemos</string>
    <string name="title_txt_numero">981 - 183 - 416</string>
    <string name="title_btn_boton">Consulta via Whathsapp</string>
    <string name="title_txt_title_correo_so">Correo de Soporte</string>
    <string name="title_txt_title_correo_co">Correo corporativo</string>
    <string name="title_txt_correo_soporte">kenya@soporte.gmail.com</string>
    <string name="title_txt_correo_corporativo">Cor_kenya@corporativo.com</string>


</resources>